Added Search Function

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,18 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Search
-    </ion-title>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-title>
+            MySeriesList
+          </ion-title>
+        </ion-col>
+        <ion-col align="right">
+          <ion-icon name="search"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
   </ion-navbar>
 </ion-header>
 
