--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,12 +3,12 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-title>
+          <ion-title class="white">
             MySeriesList
           </ion-title>
         </ion-col>
         <ion-col align="right">
-          <ion-icon name="search"></ion-icon>
+          <ion-icon name="search" (click)="search()"></ion-icon>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -16,6 +16,6 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding  class="bg-style">
   
 </ion-content>
