--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,21 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <ion-title class="white">
-            MySeriesList
-          </ion-title>
-        </ion-col>
-        <ion-col align="right">
-          <ion-icon name="search" (click)="search()"></ion-icon>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <ion-title>
+      MySeriesList
+    </ion-title>
 
+    <ion-buttons end>
+      <button ion-button icon-only (click)="search()">
+        <ion-icon name="search"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding  class="bg-style">
+<ion-content padding class="bg-style">
   
 </ion-content>
