--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,4 +21,10 @@
 
 <ion-content padding class="bg-style">
 
+  <ng-container *ngFor="let singleseries of series">
+    <ng-container *ngIf="singleseries.list==selectedList">
+      {{singleseries.seriesName}}
+    </ng-container>
+  </ng-container>
+
 </ion-content>
