--- a/src/pages/seasons/seasons.html
+++ b/src/pages/seasons/seasons.html
@@ -15,8 +15,8 @@
 
 <ion-content padding class="bg-style white">
 
-  <ng-container *ngIf="seasons">
-    <ion-grid *ngFor="let season of seasons; let i = index" (click)="showEpisodes(season)" class="bg-style white" margin-bottom>
+  <ng-container *ngIf="series">
+    <ion-grid *ngFor="let season of series.seasons; let i = index" (click)="showEpisodes(season)" class="bg-style white" margin-bottom>
       <ion-row>
         <ion-col *ngIf="season.seasonNumber == 0">
           <ion-label class="white bigger" no-margin>
@@ -30,7 +30,7 @@
         </ion-col>
         <ion-col>
           <ion-label class="white right" no-margin>
-            0/{{season.episodes.length}}
+            {{season.progressNumber}}/{{season.episodes.length}}
           </ion-label>
         </ion-col>
       </ion-row>
